[gd_scene load_steps=4 format=3 uid="uid://dx44ngbrnflr3"]

[ext_resource type="Script" path="res://heart.gd" id="1_goywo"]
[ext_resource type="Texture2D" uid="uid://bqoq38mokj6h3" path="res://moleheart.png" id="2_34cjt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d038j"]
size = Vector2(14, 12)

[node name="Heart" type="Area2D"]
script = ExtResource("1_goywo")

[node name="MoleSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_34cjt")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_d038j")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered" flags=18]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited" flags=18]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout" flags=18]
